# Thesis_IOT_Dashboard

./: .gitignore  BCRYPT_ISSUE_FIXED_FINAL.md  CHANGELOG.md  DARK_MODE_TEXT_FIXED.md  DEPLOYMENT.md  README.md  REGISTRATION_FIXED.md  RESOLVED_ISSUES.md  package-lock.json
client/: AUTHENTICATION.md  BACKGROUND_DESIGN.md  package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  api.tsx  index.css  main.tsx
client/src/components/: AntiFlickerChart.tsx  ErrorBoundary.tsx  Icons.tsx  Layout.tsx  LoadingSkeleton.tsx  MQTTBrokerControl.tsx  ProtectedRoute.tsx  UI.tsx  UserDropdown.tsx
client/src/components/ui/: dialog.tsx  index.ts  input.tsx  modal.tsx
client/src/contexts/: AuthContext.tsx  ThemeContext.tsx  ToastContext.tsx
client/src/pages/: ChatbotPage.tsx  DashboardPage.tsx  DevicePage.tsx  LoginPage.tsx  ProfilePage.tsx  StatisticPage.tsx
server/: .env  .env.template  .gitignore  ENHANCED_MQTT_SYSTEM_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MQTT_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  SETUP_GUIDE.md  SQL_INJECTION_PREVENTION_SUMMARY.md  UV_COMPLETE_SETUP.md  UV_INSTALL_FIX.md  UV_SETUP.md  app.db  chatLLM.py  example_usage.py  get_sqlite3.py  main.db  main.py  mainDatabase.db  mqtt_broker_demo.py  pyproject.toml  python_db_dummy.py  requirements.txt  run_dev.bat  run_dev.ps1  server.py  setup.bat  simple_mqtt_test.py  status.py  test.py  test_admin.py  test_api.py  test_enhanced_mqtt_system.py  test_installation.py  test_mqtt_api.py  test_security.py  test_server.py  test_setup.py  test_simple.py  (+1 more)
server/api/: auth.py  devices.py
server/app/: bcrypt_fix.py  database.py  dependencies.py  models.py
server/app/routers/: auth.py  data.py  mqtt.py  mqtt_brokers.py  mqtt_simple.py
server/app/services/: auth_service.py  enhanced_mqtt_service.py  mqtt_service.py
server/config/: __init__.py  database.py
server/models/: __init__.py  auth_schemas.py  database.py  schemas.py  user.py
server/services/: __init__.py  auth_service.py  database_service.py  device_service.py  mqtt_service.py  mqtt_service_refactored.py  security_service.py  socketio_service.py
