[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.13",
    "fastapi>=0.115.13",
    "langchain[together]>=0.3.26",
    "langchain-openai>=0.3.25",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "starlette>=0.46.2",
    "uvicorn>=0.34.3",
    "langgraph>=0.4.10",
]
