[project]
name = "iot-dashboard-backend"
version = "0.1.0"
description = "IoT Dashboard Backend with FastAPI, MQTT, SQLite, and Socket.IO"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-socketio>=5.11.0",
    "paho-mqtt>=2.1.0",
    "sqlalchemy>=2.0.25",
    "python-multipart>=0.0.9",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "asyncio-mqtt>=0.13.0",
    "aiofiles>=24.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiomqtt>=2.3.0",
    "websockets>=12.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "models*", "services*"]

[tool.setuptools]
py-modules = ["main"]

[project.scripts]
iot-dashboard = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
